--- a/src/components/ShoppingCart.css
+++ b/src/components/ShoppingCart.css
@@ -1,5 +1,16 @@
+.cart-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  right: -110%;
+  background-color: white;
+  height: 100%;
+  width: 400px;
+  padding: 20px;
+}
+
 .cart-wrapper h1 {
-  font-size: 2em;
+  font-size: 1.5em;
 }
 
 .cart-buttons {
